feat: [KAN-102] user_profile & user_address (#9)
