# server/docs/swagger.yaml
@@ -16,7 +16,39 @@ definitions:
     required:
     - code
     type: object
-  data.UserVO:
+  data.UserAddressVO:
+    properties:
+      city:
+        type: string
+      contact_phone:
+        type: string
+      country:
+        type: string
+      detail:
+        type: string
+      first_name:
+        type: string
+      id:
+        type: integer
+      is_default:
+        type: boolean
+      last_name:
+        type: string
+      province:
+        type: string
+      user_id:
+        type: integer
+      zip_code:
+        type: string
+    required:
+    - contact_phone
+    - country
+    - detail
+    - first_name
+    - last_name
+    - zip_code
+    type: object
+  data.UserLoginVO:
     properties:
       email:
         type: string
@@ -27,6 +59,19 @@ definitions:
     required:
     - email
     - password
+    type: object
+  data.UserProfileVO:
+    properties:
+      avatar:
+        type: string
+      default_address:
+        $ref: '#/definitions/data.UserAddressVO'
+      email:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
     type: object
 info:
   contact: {}
@@ -43,7 +88,7 @@ paths:
         name: user
         required: true
         schema:
-          $ref: '#/definitions/data.UserVO'
+          $ref: '#/definitions/data.UserLoginVO'
       - description: Client identifier
         enum:
         - customer
@@ -99,7 +144,14 @@ paths:
         type: string
       responses:
         "200":
-          description: OK
+          description: Logout successful
+          schema:
+            allOf:
+            - $ref: '#/definitions/data.BaseResponse'
+            - properties:
+                data:
+                  type: string
+              type: object
       summary: User Logout
       tags:
       - Authentication
@@ -115,7 +167,7 @@ paths:
         name: user
         required: true
         schema:
-          $ref: '#/definitions/data.UserVO'
+          $ref: '#/definitions/data.UserLoginVO'
       - description: Client identifier
         enum:
         - customer
@@ -135,7 +187,7 @@ paths:
             $ref: '#/definitions/data.BaseResponse'
       summary: Register a new user
       tags:
-      - User
+      - Register
   /user-ms/v1/{client}/users/activate:
     put:
       consumes:
@@ -168,5 +220,149 @@ paths:
             $ref: '#/definitions/data.BaseResponse'
       summary: Activate a new user
       tags:
+      - Register
+  /user-ms/v1/customer/users/self:
+    get:
+      consumes:
+      - application/json
+      description: This endpoint allows current login user fetch his/her profile in
+        JSON format.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: data is UserProfileVO
+          schema:
+            $ref: '#/definitions/data.BaseResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/data.BaseResponse'
+      summary: Get User Profile
+      tags:
       - User
+    put:
+      consumes:
+      - application/json
+      description: This endpoint allows current login user update his/her profile
+        in JSON format.
+      parameters:
+      - description: User profile to update
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/data.UserProfileVO'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: data is UserProfileVO
+          schema:
+            $ref: '#/definitions/data.BaseResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/data.BaseResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/data.BaseResponse'
+      summary: Update User Profile
+      tags:
+      - User
+  /user-ms/v1/customer/users/self/addresses:
+    get:
+      consumes:
+      - application/json
+      description: This endpoint allows user list all their addresses.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: data is []UserAddressVO
+          schema:
+            $ref: '#/definitions/data.BaseResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/data.BaseResponse'
+      summary: List User Addresses
+      tags:
+      - UserAddress
+    post:
+      consumes:
+      - application/json
+      description: This endpoint allows user create new address in JSON format.
+      parameters:
+      - description: user address to create
+        in: body
+        name: address
+        required: true
+        schema:
+          $ref: '#/definitions/data.UserAddressVO'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: data is UserAddressVO
+          schema:
+            $ref: '#/definitions/data.BaseResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/data.BaseResponse'
+      summary: Create New User Address
+      tags:
+      - UserAddress
+  /user-ms/v1/customer/users/self/addresses/{address_id}:
+    delete:
+      consumes:
+      - application/json
+      description: This endpoint allows user delete their address.
+      parameters:
+      - description: Address ID
+        in: path
+        name: address_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/data.BaseResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/data.BaseResponse'
+      summary: Delete User Address
+      tags:
+      - UserAddress
+    put:
+      consumes:
+      - application/json
+      description: This endpoint allows user update their old address in JSON format.
+      parameters:
+      - description: user address to update
+        in: body
+        name: address
+        required: true
+        schema:
+          $ref: '#/definitions/data.UserAddressVO'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: data is UserAddressVO
+          schema:
+            $ref: '#/definitions/data.BaseResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/data.BaseResponse'
+      summary: Update existing User Address
+      tags:
+      - UserAddress
 swagger: "2.0"
